Import Roboto font from Google Fonts

--- a/index.html
+++ b/index.html
@@ -7,114 +7,116 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="sidebar">
-        <h1>Dashboard</h1>
-        <ul id="navigation">
-            <li>Home</li>
-            <li>Profile</li>
-            <li>Messages</li>
-            <li>History</li>
-            <li>Tasks</li>
-            <li>Communities</li>
-        </ul>
-        <ul id="settings">
-            <li>Settings</li>
-            <li>Support</li>
-            <li>Privacy</li>
-        </ul>
-    </div>
-    <div class="header">
-        <h2>Header</h2>
-        <div class="search">
-            <span>Search</span>
-            <input type="text" class="search">
-        </div>
-        <div class="account">
-            <ul>
-                <li>Notifs</li>
-                <li>Account Settings</li>
+    <div class="container">
+        <div class="sidebar">
+            <h1>Dashboard</h1>
+            <ul id="navigation">
+                <li>Home</li>
+                <li>Profile</li>
+                <li>Messages</li>
+                <li>History</li>
+                <li>Tasks</li>
+                <li>Communities</li>
+            </ul>
+            <ul id="settings">
+                <li>Settings</li>
+                <li>Support</li>
+                <li>Privacy</li>
             </ul>
         </div>
-        <div class="welcome">
-            <span>Profile Image</span>
-            <div class="user-greeting">
-                <p id="greeting">Hi there,</p>
-                <p id="user">John Doe (@jdoe)</p>
+        <div class="header">
+            <h2>Header</h2>
+            <div class="search">
+                <span>Search</span>
+                <input type="text" class="search">
             </div>
-        </div>
-        <div class="make-post">
-            <ul>
-                <li><button>New</button></li>
-                <li><button>Upload</button></li>
-                <li><button>Share</button></li>
-            </ul>
-        </div>
-    </div>
-    <div class="main">
-        <h2>Main Content</h2>
-        <div class="projects">
-            <h3>My Projects</h3>
-            <div class="card">
-                <h4>Project 1</h4>
-                <p>Some text</p>
+            <div class="account">
+                <ul>
+                    <li>Notifs</li>
+                    <li>Account Settings</li>
+                </ul>
             </div>
-            <div class="card">
-                <h4>Project 2</h4>
-                <p>Some words</p>
-            </div>
-            <div class="card">
-                <h4>Project 3</h4>
-                <p>Some paragraph</p>
-            </div>
-            <div class="card">
-                <h4>Project 4</h4>
-                <p>Some description</p>
-            </div>
-            <div class="card">
-                <h4>Project 5</h4>
-                <p>Some blurb of details</p>
-            </div>
-            <div class="card">
-                <h4>Project 6</h4>
-                <p>I used Thesaurus.com for that last one</p>
-            </div>
-        </div>
-        <div class="announcements">
-            <h3>Announcements</h3>
-            <div class="announcement">
-                <h5>Site Maintenance</h5>
-                <p>We will be fixing the site</p>
-            </div>
-            <div class="announcement">
-                <h5>Community Share Day</h5>
-                <p>Sharing is caring</p>
-            </div>
-            <div class="announcement">
-                <h5>Updated Privacy Policy</h5>
-                <p>We need to respect your privacy more</p>
-            </div>
-        </div>
-        <div class="trending">
-            <h3>Trending</h3>
-            <div class="trend">
+            <div class="welcome">
                 <span>Profile Image</span>
-                <div class="trending-post">
-                    <h5 id="trending-user">@tegan</h5>
-                    <p id="trending-post">World Peace Builder</p>
+                <div class="user-greeting">
+                    <p id="greeting">Hi there,</p>
+                    <p id="user">John Doe (@jdoe)</p>
                 </div>
             </div>
-            <div class="trend">
-                <span>Profile Image</span>
-                <div class="trending-post">
-                    <h5 id="trending-user">@jdoe</h5>
-                    <p id="trending-post">Project 1</p>
+            <div class="make-post">
+                <ul>
+                    <li><button>New</button></li>
+                    <li><button>Upload</button></li>
+                    <li><button>Share</button></li>
+                </ul>
+            </div>
+        </div>
+        <div class="main">
+            <h2>Main Content</h2>
+            <div class="projects">
+                <h3>My Projects</h3>
+                <div class="card">
+                    <h4>Project 1</h4>
+                    <p>Some text</p>
+                </div>
+                <div class="card">
+                    <h4>Project 2</h4>
+                    <p>Some words</p>
+                </div>
+                <div class="card">
+                    <h4>Project 3</h4>
+                    <p>Some paragraph</p>
+                </div>
+                <div class="card">
+                    <h4>Project 4</h4>
+                    <p>Some description</p>
+                </div>
+                <div class="card">
+                    <h4>Project 5</h4>
+                    <p>Some blurb of details</p>
+                </div>
+                <div class="card">
+                    <h4>Project 6</h4>
+                    <p>I used Thesaurus.com for that last one</p>
                 </div>
             </div>
-            <div class="trend">
-                <span>Profile Image</span>
-                <div class="trending-post">
-                    <h5 id="trending-user">@alex</h5>
-                    <p id="trending-post">Traffic Terminator</p>
+            <div class="announcements">
+                <h3>Announcements</h3>
+                <div class="announcement">
+                    <h5>Site Maintenance</h5>
+                    <p>We will be fixing the site</p>
+                </div>
+                <div class="announcement">
+                    <h5>Community Share Day</h5>
+                    <p>Sharing is caring</p>
+                </div>
+                <div class="announcement">
+                    <h5>Updated Privacy Policy</h5>
+                    <p>We need to respect your privacy more</p>
+                </div>
+            </div>
+            <div class="trending">
+                <h3>Trending</h3>
+                <div class="trend">
+                    <span>Profile Image</span>
+                    <div class="trending-post">
+                        <h5 id="trending-user">@tegan</h5>
+                        <p id="trending-post">World Peace Builder</p>
+                    </div>
+                </div>
+                <div class="trend">
+                    <span>Profile Image</span>
+                    <div class="trending-post">
+                        <h5 id="trending-user">@jdoe</h5>
+                        <p id="trending-post">Project 1</p>
+                    </div>
+                </div>
+                <div class="trend">
+                    <span>Profile Image</span>
+                    <div class="trending-post">
+                        <h5 id="trending-user">@alex</h5>
+                        <p id="trending-post">Traffic Terminator</p>
+                    </div>
                 </div>
             </div>
         </div>
