Implement graph layout for webpage

--- a/index.html
+++ b/index.html
@@ -25,7 +25,6 @@
             </ul>
         </div>
         <div class="header">
-            <h2>Header</h2>
             <div class="search">
                 <span>Search</span>
                 <input type="text" class="search">
@@ -52,32 +51,33 @@
             </div>
         </div>
         <div class="main">
-            <h2>Main Content</h2>
             <div class="projects">
                 <h3>My Projects</h3>
-                <div class="card">
-                    <h4>Project 1</h4>
-                    <p>Some text</p>
-                </div>
-                <div class="card">
-                    <h4>Project 2</h4>
-                    <p>Some words</p>
-                </div>
-                <div class="card">
-                    <h4>Project 3</h4>
-                    <p>Some paragraph</p>
-                </div>
-                <div class="card">
-                    <h4>Project 4</h4>
-                    <p>Some description</p>
-                </div>
-                <div class="card">
-                    <h4>Project 5</h4>
-                    <p>Some blurb of details</p>
-                </div>
-                <div class="card">
-                    <h4>Project 6</h4>
-                    <p>I used Thesaurus.com for that last one</p>
+                <div class="card-container">
+                    <div class="card">
+                        <h4>Project 1</h4>
+                        <p>Some text</p>
+                    </div>
+                    <div class="card">
+                        <h4>Project 2</h4>
+                        <p>Some words</p>
+                    </div>
+                    <div class="card">
+                        <h4>Project 3</h4>
+                        <p>Some paragraph</p>
+                    </div>
+                    <div class="card">
+                        <h4>Project 4</h4>
+                        <p>Some description</p>
+                    </div>
+                    <div class="card">
+                        <h4>Project 5</h4>
+                        <p>Some blurb of details</p>
+                    </div>
+                    <div class="card">
+                        <h4>Project 6</h4>
+                        <p>I used Thesaurus.com for that last one</p>
+                    </div>
                 </div>
             </div>
             <div class="announcements">
