Designed layout for main page's card container

--- a/index.html
+++ b/index.html
@@ -80,28 +80,99 @@
                 <h3>My Projects</h3>
                 <div class="card-container">
                     <div class="card">
-                        <h4>Project 1</h4>
-                        <p>Some text</p>
+                        <div class="description">
+                            <h4>Super Cool Project</h4>
+                            <p>
+                                Sed tempus ut lacus ut scelerisque.
+                                Suspendisse sollicitudin nibh erat, id
+                                facilisis felis accumsan nec.
+                            </p>
+                        </div>
+                        <div class="card-icons">
+                            <i class="far fa-star"></i>
+                            <i class="far fa-bookmark"></i>
+                            <i class="far fa-share-from-square"></i>
+                        </div>
                     </div>
                     <div class="card">
-                        <h4>Project 2</h4>
-                        <p>Some words</p>
+                        <div class="description">
+                            <h4>Less Cool Project</h4>
+                            <p>
+                                Nullam condimentum ipsum us lectus vehicula
+                                consectetur. Quisque sed dolor tincidunt,
+                                consecteur sapien et, facilisis dolor. Duis sem
+                                purus, dignissim ut sapien in, varius
+                                pellentesque lacus.
+                            </p>
+                        </div>
+                        <div class="card-icons">
+                            <i class="far fa-star"></i>
+                            <i class="far fa-bookmark"></i>
+                            <i class="far fa-share-from-square"></i>
+                        </div>
                     </div>
                     <div class="card">
-                        <h4>Project 3</h4>
-                        <p>Some paragraph</p>
+                        <div class="description">
+                            <h4>Impossible App</h4>
+                            <p>
+                                In hac habitasse platea dictumst. Vivamus
+                                dictum rutrum acru, a placerat velit sagitis
+                                id.
+                            </p>
+                        </div>
+                        <div class="card-icons">
+                            <i class="far fa-star"></i>
+                            <i class="far fa-bookmark"></i>
+                            <i class="far fa-share-from-square"></i>
+                        </div>
                     </div>
                     <div class="card">
-                        <h4>Project 4</h4>
-                        <p>Some description</p>
+                        <div class="description">
+                            <h4>Easy Peasy App</h4>
+                            <p>
+                                Etiam cursus eros ac efficitur fringillia.
+                                Vestibulum dignissim uma eget accumsan
+                                aliquam. Curabitur dignissim nisi in tortor
+                                commodo, ac bibendum magna tincidunt.
+                            </p>
+                        </div>
+                        <div class="card-icons">
+                            <i class="far fa-star"></i>
+                            <i class="far fa-bookmark"></i>
+                            <i class="far fa-share-from-square"></i>
+                        </div>
                     </div>
                     <div class="card">
-                        <h4>Project 5</h4>
-                        <p>Some blurb of details</p>
+                        <div class="description">
+                            <h4>Ad Blocker</h4>
+                            <p>
+                                Quissque eget rutrum nisl. Nam augue
+                                justo cursus vitae metus vel, phareta
+                                hendrerit felis. Aliquam sed malesuada
+                                eros.
+                            </p>
+                        </div>
+                        <div class="card-icons">
+                            <i class="far fa-star"></i>
+                            <i class="far fa-bookmark"></i>
+                            <i class="far fa-share-from-square"></i>
+                        </div>
                     </div>
                     <div class="card">
-                        <h4>Project 6</h4>
-                        <p>I used Thesaurus.com for that last one</p>
+                        <div class="description">
+                            <h4>Money Maker</h4>
+                            <p>
+                                Praesent convallis, libero quis congue
+                                elementum, nunc ante faucibus sapeien, ac
+                                scelerisque tortor purus sit amet ex.
+                                Pellenteque nec sem val aliquam.
+                            </p>
+                        </div>
+                        <div class="card-icons">
+                            <i class="far fa-star"></i>
+                            <i class="far fa-bookmark"></i>
+                            <i class="far fa-share-from-square"></i>
+                        </div>
                     </div>
                 </div>
             </div>
