Styled announcements window

--- a/index.html
+++ b/index.html
@@ -178,40 +178,57 @@
             </div>
             <div class="announcements">
                 <h3>Announcements</h3>
-                <div class="announcement">
-                    <h5>Site Maintenance</h5>
-                    <p>We will be fixing the site</p>
-                </div>
-                <div class="announcement">
-                    <h5>Community Share Day</h5>
-                    <p>Sharing is caring</p>
-                </div>
-                <div class="announcement">
-                    <h5>Updated Privacy Policy</h5>
-                    <p>We need to respect your privacy more</p>
+                <div class="announcement-container">
+                    <div class="announcement">
+                        <h5>Site Maintenance</h5>
+                        <p>
+                            Vestibulum condimentum tellus lacus,
+                            in accumsan elit maximus ac. Donec 
+                            hendrerit sodales congue felipercasalopadas
+                        </p>
+                    </div>
+                    <div class="announcement">
+                        <h5>Community Share Day</h5>
+                        <p>
+                            Nam vel lectus tincidnt, rutrum nulla
+                            eu, ornare libero. Aliquam dictum
+                            accumsan porttitor quesa dateporlabanodesea logra
+                        </p>
+                    </div>
+                    <div class="announcement">
+                        <h5>Updated Privacy Policy</h5>
+                        <p>
+                            Phasellus efficitur nisi eget elit
+                            consectetur, eget condimentum ante
+                            auctor. Cras fringillia sagittis sem in
+                            mattis llllllllllllllllllllllllllllllllllllllllllllll
+                        </p>
+                    </div>
                 </div>
             </div>
             <div class="trending">
                 <h3>Trending</h3>
-                <div class="trend">
-                    <span>Profile Image</span>
-                    <div class="trending-post">
-                        <h5 id="trending-user">@tegan</h5>
-                        <p id="trending-post">World Peace Builder</p>
+                <div class="trend-container">
+                    <div class="trend">
+                        <span>Profile Image</span>
+                        <div class="trending-post">
+                            <h5 id="trending-user">@tegan</h5>
+                            <p id="trending-post">World Peace Builder</p>
+                        </div>
                     </div>
-                </div>
-                <div class="trend">
-                    <span>Profile Image</span>
-                    <div class="trending-post">
-                        <h5 id="trending-user">@jdoe</h5>
-                        <p id="trending-post">Project 1</p>
+                    <div class="trend">
+                        <span>Profile Image</span>
+                        <div class="trending-post">
+                            <h5 id="trending-user">@jdoe</h5>
+                            <p id="trending-post">Project 1</p>
+                        </div>
                     </div>
-                </div>
-                <div class="trend">
-                    <span>Profile Image</span>
-                    <div class="trending-post">
-                        <h5 id="trending-user">@alex</h5>
-                        <p id="trending-post">Traffic Terminator</p>
+                    <div class="trend">
+                        <span>Profile Image</span>
+                        <div class="trending-post">
+                            <h5 id="trending-user">@alex</h5>
+                            <p id="trending-post">Traffic Terminator</p>
+                        </div>
                     </div>
                 </div>
             </div>
