Finalized content of mainpage and made announcements/trending to a single div

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="container">
         <div class="sidebar">
-            <h1>Dashboard</h1>
+            <h1><i class="fas fa-table-columns"></i> Dashboard</h1>
             <ul id="navigation">
                 <li>
                     <i class="fas fa-house"></i>
@@ -176,58 +176,60 @@
                     </div>
                 </div>
             </div>
-            <div class="announcements">
-                <h3>Announcements</h3>
-                <div class="announcement-container">
-                    <div class="announcement">
-                        <h5>Site Maintenance</h5>
-                        <p>
-                            Vestibulum condimentum tellus lacus,
-                            in accumsan elit maximus ac. Donec 
-                            hendrerit sodales congue felipercasalopadas
-                        </p>
-                    </div>
-                    <div class="announcement">
-                        <h5>Community Share Day</h5>
-                        <p>
-                            Nam vel lectus tincidnt, rutrum nulla
-                            eu, ornare libero. Aliquam dictum
-                            accumsan porttitor quesa dateporlabanodesea logra
-                        </p>
-                    </div>
-                    <div class="announcement">
-                        <h5>Updated Privacy Policy</h5>
-                        <p>
-                            Phasellus efficitur nisi eget elit
-                            consectetur, eget condimentum ante
-                            auctor. Cras fringillia sagittis sem in
-                            mattis llllllllllllllllllllllllllllllllllllllllllllll
-                        </p>
+            <div class="side-content">
+                <div class="announcements">
+                    <h3>Announcements</h3>
+                    <div class="announcement-container">
+                        <div class="announcement">
+                            <h5>Site Maintenance</h5>
+                            <p>
+                                Vestibulum condimentum tellus lacus,
+                                in accumsan elit maximus ac. Donec
+                                hendrerit sodales congue felipercasalopadas
+                            </p>
+                        </div>
+                        <div class="announcement">
+                            <h5>Community Share Day</h5>
+                            <p>
+                                Nam vel lectus tincidnt, rutrum nulla
+                                eu, ornare libero. Aliquam dictum
+                                accumsan porttitor quesa dateporlabanodesea logra
+                            </p>
+                        </div>
+                        <div class="announcement">
+                            <h5>Updated Privacy Policy</h5>
+                            <p>
+                                Phasellus efficitur nisi eget elit
+                                consectetur, eget condimentum ante
+                                auctor. Cras fringillia sagittis sem in
+                                mattis llllllllllllllllllllllllllllllllllllllllllllll
+                            </p>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="trending">
-                <h3>Trending</h3>
-                <div class="trend-container">
-                    <div class="trend">
-                        <span>Profile Image</span>
-                        <div class="trending-post">
-                            <h5 id="trending-user">@tegan</h5>
-                            <p id="trending-post">World Peace Builder</p>
+                <div class="trending">
+                    <h3>Trending</h3>
+                    <div class="trend-container">
+                        <div class="trend">
+                            <img src="images/horse-profile.jpeg" alt="avatar" class="avatar">
+                            <div class="trending-post">
+                                <h5 id="trend-user">@tegan</h5>
+                                <p id="trend-post">World Peace Builder</p>
+                            </div>
                         </div>
-                    </div>
-                    <div class="trend">
-                        <span>Profile Image</span>
-                        <div class="trending-post">
-                            <h5 id="trending-user">@jdoe</h5>
-                            <p id="trending-post">Project 1</p>
+                        <div class="trend">
+                            <img src="images/cat-profile.jpeg" alt="avatar" class="avatar">
+                            <div class="trending-post">
+                                <h5 id="trend-user">@jdoe</h5>
+                                <p id="trend-post">Super Cool Project</p>
+                            </div>
                         </div>
-                    </div>
-                    <div class="trend">
-                        <span>Profile Image</span>
-                        <div class="trending-post">
-                            <h5 id="trending-user">@alex</h5>
-                            <p id="trending-post">Traffic Terminator</p>
+                        <div class="trend">
+                            <img src="images/penguin-profile.jpeg" alt="avatar" class="avatar">
+                            <div class="trending-post">
+                                <h5 id="trend-user">@alex</h5>
+                                <p id="trend-post">Traffic Terminator</p>
+                            </div>
                         </div>
                     </div>
                 </div>
